Changed from ShendoahGC to ZGC because of predictable close of the application